[package]
name = "my-reverse-proxy-users"
version = "0.1.0"
edition = "2021"

[dependencies]
my-http-server = { tag = "0.7.1", git = "https://github.com/MyJetTools/my-http-server.git", features = [
    "macros",
    "controllers",
    "static-files",
] }

rust-extensions = { tag = "0.1.4", git = "https://github.com/MyJetTools/rust-extensions.git", features = [
    "with-tokio",
    "base64",
    "vec-maybe-stack",
] }

my-logger = { tag = "1.1.0", git = "https://github.com/MyJetTools/my-logger.git" }

tokio = { version = "*", features = ["full"] }
tokio-util = "*"
async-trait = "*"


serde = { version = "*", features = ["derive"] }
serde_yaml = "*"
